# cognitive-connectomes

./: .gitignore  LICENSE  PREDICTION_TASKS_INTERPRETATION.md  PROJECT_KNOWLEDGE_BASE.md  PROJECT_PLAN.md  README.md  pyproject.toml
data/: README.md
data/celegans/: README.md  celegans_neurotransmitters.csv
data/human/: README.md
experiments/: __init__.py
experiments/celegans/: __init__.py  matrix_config.py  substrates.py
experiments/celegans_narma10/: README.md  plot_narma_demo.py  run_all.py  run_experiment.py  stats.py  substrates.py
experiments/human/: __init__.py  build_consensus.py  matrix_config.py  routing_substrate.py  substrates.py
experiments/v2a_continuous_weights/: notebook.ipynb
experiments/v2b_directed_weighted/: _run_probe_v2b.py  notebook.ipynb
notebooks/celegans_narma10/: README.md  config.py  plots.py  run_all.py  run_experiment.py
notebooks/v2a_continuous_weights/: _run_probe.py  _run_probe_v2c.py  notebook.ipynb
notebooks/v2b_directed_weighted/: notebook.ipynb
presentations/: 01-cognitive-connectomes.ipynb  01-cognitive-connectomes.slides.html
reservoirpy-tutorials/: 1-Getting_Started.ipynb
src/: __init__.py
src/analysis/: __init__.py  manifold.py  null_models.py  spectral.py  weight_structure.py
src/connectomes/: __init__.py  celegans_cook2019.py  consensus.py  human_suarez.py  neurotransmitters.py
src/experiment/: __init__.py  config.py  plots.py  runner.py  stats.py
src/nulls/: __init__.py  clustering_rewire.py  degree_rewire.py  erdos_renyi.py  modularity_rewire.py  random_gaussian.py  (+1 more)
tests/: test_smoke.py
(+93 files in other folders)
